<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="bicca.lucas.agronutriapp.scene.result.ViewResultViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".scene.result.ViewResultActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:text="@string/view_result_title"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_view_result_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".scene.result.ViewResultActivity"
            tools:showIn="@layout/activity_view_result">

            <TextView
                android:id="@+id/activity_view_result_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.plantLabel}"
                android:textSize="@dimen/activity_view_result_plant_label_size"
                android:layout_marginTop="@dimen/activity_view_result_plant_margin_top"
                tools:text="Arroz"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/activity_view_result_liming_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_view_result_container_margin_top"
                android:padding="@dimen/activity_view_result_result_container_padding"
                app:layout_constraintTop_toBottomOf="@id/activity_view_result_plant"
                android:background="@drawable/result_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="@{viewModel.showLimingResult ? View.VISIBLE : View.GONE}">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/activity_view_result_option_label_size"
                    android:text="@string/view_result_first_option"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.limingResult}"
                    tools:text="2 toneladas"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/activity_view_result_option_margin_top"
                    android:textSize="@dimen/activity_view_result_option_label_size"
                    android:text="@string/view_result_second_option"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.limingByAreaResult}"
                    tools:text="@string/view_result_quantity_liming_tools"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="@dimen/activity_view_result_days_margin_top"
                    android:text="@string/view_result_days_liming_tools"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_view_result_container_margin_top"
                app:layout_constraintTop_toBottomOf="@id/activity_view_result_plant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="@{viewModel.showFertilizingResult ? View.VISIBLE : View.GONE}"
                tools:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_result_first_cultivation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/view_result_quantity_fertilizing_tools"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_view_result_cutivation_margin_top"
                    android:text="@string/view_result_second_cultivation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/view_result_quantity_fertilizing_tools"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_view_result_cutivation_margin_top"
                    android:text="@string/view_result_first_cultivation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/view_result_quantity_fertilizing_tools"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_view_result_cutivation_margin_top"
                    android:text="@string/view_result_second_cultivation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/view_result_quantity_fertilizing_tools"/>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>