<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="bicca.lucas.agronutriapp.scene.info_form.viewmodel.InfoFormFourViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".scene.info_form.fragment.InfoFormFourFragment">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_mo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_mo"
                app:error="@{viewModel.moErrorMessage}"
                app:errorEnabled="@{viewModel.moShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_mo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.mo}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_clay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_clay"
                app:error="@{viewModel.clayErrorMessage}"
                app:errorEnabled="@{viewModel.clayShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_mo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_clay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.clay}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_k_mol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_k_cmol"
                app:error="@{viewModel.kMolErrorMessage}"
                app:errorEnabled="@{viewModel.kMolShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_clay">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_k_mol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.kMol}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_texture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_texture"
                app:error="@{viewModel.textureErrorMessage}"
                app:errorEnabled="@{viewModel.textureShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_k_mol">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_texture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.texture}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_s"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_s"
                app:error="@{viewModel.sErrorMessage}"
                app:errorEnabled="@{viewModel.sShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_texture">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.s}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_k_mg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_k_mg"
                app:error="@{viewModel.kMgErrorMessage}"
                app:errorEnabled="@{viewModel.kMgShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_s">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_k_mg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.kMg}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_p_mehlich"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_p_mehlich"
                app:error="@{viewModel.pMehlichErrorMessage}"
                app:errorEnabled="@{viewModel.pMehlichShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_k_mg">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_p_mehlich"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.pMehlich}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/info_form_four_fragment_til_ctc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/info_form_four_fragment_margin"
                android:layout_marginTop="@dimen/info_form_four_fragment_margin"
                android:layout_marginEnd="@dimen/info_form_four_fragment_margin"
                android:hint="@string/form_four_fragment_ctc_ph7"
                app:error="@{viewModel.ctcErrorMessage}"
                app:errorEnabled="@{viewModel.ctcShowErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_form_four_fragment_til_p_mehlich">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/info_form_four_fragment_tie_ctc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/number_digits"
                    android:inputType="number"
                    android:text="@{viewModel.ctc}"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
